Apache Solr Content Extraction Library (Solr Cell)
                            Version 1.4-dev
                            Release Notes

This file describes changes to the Solr Cell (contrib/extraction) module.  See SOLR-284 for details.

Introduction
------------

Apache Solr Extraction provides a means for extracting and indexing content contained in "rich" documents, such
as Microsoft Word, Adobe PDF, etc.  (Each name is a trademark of their respective owners)  This contrib module
uses Apache Tika to extract content and metadata from the files, which can then be indexed.  For more information,
see http://wiki.apache.org/solr/ExtractingRequestHandler

Getting Started
---------------
You will need Solr up and running.  Then, simply add the extraction JAR file, plus the Tika dependencies (in the ./lib folder)
to your Solr Home lib directory.  See http://wiki.apache.org/solr/ExtractingRequestHandler for more details on hooking it in
 and configuring.


$Id:$
================== Release 1.4-dev ==================

1. SOLR-284:  Added in support for extraction. (Eric Pugh, Chris Harris, gsingers)

2. SOLR-284: Removed "silent success" key generation (gsingers)

3. SOLR-1075: Upgrade to Tika 0.3.  See http://www.apache.org/dist/lucene/tika/CHANGES-0.3.txt (gsingers)

4. SOLR-1128: Added metadata output to "extract only" option.  (gsingers)

5. SOLR-1310: Upgrade to Tika 0.4. Note there are some differences in detecting Languages now.
    See http://www.lucidimagination.com/search/document/d6f1899a85b2a45c/vote_apache_tika_0_4_release_candidate_2#d6f1899a85b2a45c
    for discussion on language detection.
    See http://www.apache.org/dist/lucene/tika/CHANGES-0.4.txt. (gsingers)